hyprland: refactor auto start apps function;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -85,13 +85,9 @@ exec-once = wm-idle
 exec-once = wm-gsetting
 exec-once = wm-xdg
 exec-once = wm-xwayland
+exec-once = auto-start
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec = pkill waybar; waybar
-
-# AutoStartup APP
-exec-once = sleep 2; telegram-desktop; hyprctl dispatch closewindow org.telegram.desktop
-exec-once = sleep 2; hyprctl dispatch exec [workspace 1] $BROWSER
-exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] $TERMINAL;
 
 # Windowrule
 # Floating Rules
