fontconfig: add serif font config;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -11,7 +11,15 @@
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
-
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Noto Serif</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
+    </edit>
+  </match>
 
   <match target="pattern">
     <test name="lang" compare="contains">
@@ -22,9 +30,21 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Zhudou Sans</string>
+      <string>Noto Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>cn</string>
+    </test>
+    <test name="family" compare="contains">
+      <string>Noto Serif</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Serif CJK SC</string>
+    </edit>
+  </match>
 
   <match target="pattern">
     <test name="lang">
@@ -35,10 +55,10 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>Noto Sans</string>
       <string>Noto Sans CJK HK</string>
     </edit>
   </match>
-
   <match target="pattern">
     <test name="lang">
       <string>zh-HK</string>
@@ -47,22 +67,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
-      <!-- not have HK -->
-      <string>Zhudou Sans</string>
-      <string>Noto Serif CJK TC</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="lang">
-      <string>zh-HK</string>
-    </test>
-    <test name="family">
-      <string>Noto Sans Mono</string>
-    </test>
-    <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
-      <string>Noto Sans Mono CJK HK</string>
+      <string>Noto Serif CJK HK</string>
     </edit>
   </match>
 
@@ -75,10 +80,10 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>Noto Sans</string>
       <string>Noto Sans CJK TC</string>
     </edit>
   </match>
-
   <match target="pattern">
     <test name="lang">
       <string>zh-TW</string>
@@ -87,21 +92,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
       <string>Noto Serif CJK TC</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="lang">
-      <string>zh-TW</string>
-    </test>
-    <test name="family">
-      <string>Noto Sans Mono</string>
-    </test>
-    <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
-      <string>Noto Sans Mono CJK TC</string>
     </edit>
   </match>
 
@@ -114,10 +105,10 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>Noto Sans</string>
       <string>Noto Sans CJK JP</string>
     </edit>
   </match>
-
   <match target="pattern">
     <test name="lang">
       <string>ja</string>
@@ -126,26 +117,12 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
       <string>Noto Serif CJK JP</string>
     </edit>
   </match>
 
   <match target="pattern">
     <test name="lang">
-      <string>ja</string>
-    </test>
-    <test name="family">
-      <string>Noto Sans Mono</string>
-    </test>
-    <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
-      <string>Noto Sans Mono CJK JP</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="lang">
       <string>ko</string>
     </test>
     <test name="family">
@@ -153,10 +130,10 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>Noto Sans</string>
       <string>Noto Sans CJK KR</string>
     </edit>
   </match>
-
   <match target="pattern">
     <test name="lang">
       <string>ko</string>
@@ -165,21 +142,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
       <string>Noto Serif CJK KR</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="lang">
-      <string>ko</string>
-    </test>
-    <test name="family">
-      <string>Noto Sans Mono</string>
-    </test>
-    <edit name="family" binding="strong">
-      <string>Zhudou Sans</string>
-      <string>Noto Sans Mono CJK KR</string>
     </edit>
   </match>
 
