--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -9,6 +9,7 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>文泉驿正黑</string>
       <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
 </match>
 
@@ -19,6 +20,7 @@
     <edit binding="strong" mode="prepend" name="family">
       <string>Microsoft YaHei</string>
       <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
 </match>
 
