fcitx5: disable prediction and adjust some settings;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -23,7 +23,7 @@ PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
 PinyinInPreedit=True
 # 启用预测
-Prediction=True
+Prediction=False
 # 预测个数
 PredictionSize=3
 # 切换输入法时的行为
@@ -37,9 +37,9 @@ UseKeypadAsSelection=False
 # 使用退格键取消选词
 BackSpaceToUnselect=True
 # 句子数量
-Number of sentence=2
+Number of sentence=1
 # 输入长于...时提示长词 (设置为 0 时禁用)
-LongWordLengthLimit=4
+LongWordLengthLimit=6
 # 快速输入的触发键
 QuickPhraseKey=semicolon
 # 使用 V 来触发快速输入
