--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -84,7 +84,7 @@ exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = wm-idle
 exec-once = wm-gsetting
 exec-once = wm-xdg
-exec-once = wm-xwayland
+# exec-once = wm-xwayland
 exec-once = auto-start
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec = pkill waybar; waybar
@@ -152,6 +152,7 @@ windowrulev2 = size 60%, 60%,class: ^(jetbrains-.*)$,title:^(Welcome to .*)$
 
 # Blur
 layerrule = blur,waybar
+windowrulev2 = noblur,class:^(.*)$
 
 # Keybind
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
