--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_family      monospace
 font_size   11
 disable_ligatures always
 
-background_opacity 0.75
+background_opacity 0.85
 background_blur 64
 
 enable_audio_bell no
@@ -16,9 +16,8 @@ term xterm-256color
 
 tab_bar_min_tabs            2
 tab_bar_edge                top
-tab_bar_style               powerline
-tab_powerline_style         slanted
-tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-
+tab_bar_style       custom
+tab_separator       ""
+tab_title_template  " {index} {title} "
 
 # vim:ft=kitty
