--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -21,7 +21,7 @@ UseInputMethodLanguageToDisplayText=True
 # 主题
 Theme=Material-Color-Blue
 # 深色主题
-DarkTheme=default-dark
+DarkTheme=Material-Color-Black
 # 跟随系统浅色/深色设置
 UseDarkTheme=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
