--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,7 +1,7 @@
 # 垂直候选列表
-Vertical Candidate List=True
+Vertical Candidate List=False
 # 使用鼠标滚轮翻页
-WheelForPaging=True
+WheelForPaging=False
 # 字体
 Font="Monospace 10"
 # 菜单字体
@@ -19,9 +19,9 @@ ShowLayoutNameInIcon=False
 # 使用输入法的语言来显示文字
 UseInputMethodLanguageToDisplayText=True
 # 主题
-Theme=Material-Color-Blue
+Theme=Fly
 # 深色主题
-DarkTheme=Material-Color-Black
+DarkTheme=default-dark
 # 跟随系统浅色/深色设置
 UseDarkTheme=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
