font: fix fcitx5-rime emoji can't display.

--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -24,4 +24,21 @@
     </edit>
 </match>
 
+<!-- Rime 不显示 emoji -->
+<!-- https://gitlab.freedesktop.org/cairo/cairo/-/issues/280 -->
+<match target="font">
+		<test name="family" compare="contains">
+			<string>Emoji</string>
+		</test>
+		<edit name="hinting" mode="assign">
+			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle" mode="assign">
+			<const>hintslight</const>
+		</edit>
+		<edit name="embeddedbitmap" mode="assign">
+			<bool>true</bool>
+		</edit>
+	</match>
+
 </fontconfig>
