--- a/config/sway/config
+++ b/config/sway/config
@@ -5,6 +5,7 @@ set $mod Mod4
 set $TERMINAL kitty
 set $BROWSER firefox
 set $TOP htop
+set $FMANAGER yazi
 
 ### Monitor
 output eDP-1 mode 2880x1800 scale 2
@@ -23,9 +24,6 @@ input "type:touchpad" {
     tap enabled
 }
 
-# Hide mouse after 5 seconds inactivity
-# seat * hide_cursor 5000
-
 ### General
 xwayland disable
 # default|stacking|tabbed
@@ -39,17 +37,18 @@ workspace_auto_back_and_forth yes
 gaps inner 1
 gaps outer 1
 
+# Hide mouse after 5 seconds inactivity
+# seat * hide_cursor 5000
+
+
 ### AutoStartup
-exec /usr/lib/polkit-kde-authentication-agent-1
-exec wl-paste --type text --watch cliphist store #Stores only text data
-exec wl-paste --type image --watch cliphist store #Stores only image data
+exec wl-paste --type text --watch cliphist store # Stores only text data
+exec wl-paste --type image --watch cliphist store # Stores only image data
 exec wm-gsetting
 exec wm-idle
 exec wm-xdg
 # exec wm-xwayland
 exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
-# @FIX: 
-# exec expose-filemanager.py
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d --replace
 
@@ -57,9 +56,6 @@ exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d 
 exec --no-startup-id auto-start
 
 ### Windowrule
-
-# Assign
-# assign [app_id="code"] workspace 5
 
 # Inhibit Idle if a window is fullscreen
 for_window [class="^.*"] inhibit_idle fullscreen
@@ -75,17 +71,17 @@ for_window [window_type = "menu"] floating enable
 
 # Floating Apps
 for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
-for_window [app_id="com.obsproject.Studio"] floating enable
-for_window [app_id="org.telegram.desktop"] floating enable; sticky enable
 for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
-for_window [app_id="org.wireshark.Wireshark"] floating enable
 for_window [app_id="com.github.wwmm.easyeffects"] floating enable
 for_window [app_id="org.fcitx.fcitx5-config-qt"] floating enable
+for_window [app_id="org.wireshark.Wireshark"] floating enable
+for_window [app_id="com.obsproject.Studio"] floating enable
+for_window [app_id="org.telegram.desktop"] floating enable
 for_window [app_id="remote-viewer"] floating enable
-for_window [app_id="thunderbird"] floating enable; resize set 75ppt; sticky enable
+for_window [app_id="timeshift-gtk"] floating enable
+for_window [app_id="thunderbird"] floating enable
 for_window [title="^Open File$"] floating enable
 for_window [app_id="Element"] floating enable
-for_window [app_id="timeshift-gtk"] floating enable
 for_window [app_id="anki"] floating enable
 for_window [app_id="mpv"] floating enable
 
@@ -97,14 +93,9 @@ for_window [class="^(com.intellij.idea.Main)$" title="^(Welcome to*)$"] {
 
 # Floating Terminal
 for_window [app_id="^(Alacritty|kitty)$" title="^(Float Terminal|System Monitor|Explore)$"] {
-    sticky enable
     floating enable
     resize set 70ppt 70ppt
 }
-
-# mpv-handler
-# .desktop set terminal = false, no need this rule
-# for_window [app_id="mpv-handler"] move scratchpad
 
 # Blender
 for_window [title="^.*(Preferences|设置)$" app_id="blender"] floating enable
@@ -134,15 +125,8 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
     resize set 60ppt 60ppt
 }
 
-# Steam & Gamescope
-# should run steam with gamescope
-# for_window [app_id="gamescope"] {
-#     floating enable
-#     resize set [width] 60ppt
-# }
-
 # Firefox
-for_window [app_id="^firefox.*$" title="^(About Firefox Developer Edition|Firefox)$"] {
+for_window [app_id="^firefox.*$" title="About Mozilla Firefox"] {
     floating enable
 }
 for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
@@ -177,9 +161,9 @@ bindsym $mod+Shift+minus move window scratchpad
 bindsym $mod+minus scratchpad show
 
 
-bindsym Ctrl+Shift+Escape exec kitty --title "System Monitor" -e $TOP
-bindsym Ctrl+Alt+Period exec kitty --title "System Monitor" -e $TOP
-bindsym $mod+E exec kitty --title "Explore" -e lf $HOME
+bindsym Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" -e $TOP
+bindsym Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" -e $TOP
+bindsym $mod+E exec $TERMINAL --title "Explore" -e $FMANAGER $HOME
 
 bindsym $mod+B exec $BROWSER
 bindsym $mod+O exec obsidian
@@ -246,25 +230,6 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
-
-mode "mode" {
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
-
-    # backslash(\) bar(|)
-    bindsym backslash splith
-    bindsym bar splitv
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+m mode "mode"
 
 ### Status Bar
 bar {
