--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,13 +1,13 @@
 # 垂直候选列表
 Vertical Candidate List=False
 # 使用鼠标滚轮翻页
-WheelForPaging=False
+WheelForPaging=True
 # 字体
-Font="Monospace 10"
+Font="Sans 10"
 # 菜单字体
-MenuFont="Sans Serif 10"
+MenuFont="Sans 10"
 # 托盘字体
-TrayFont="Sans Serif 10"
+TrayFont="Sans Bold 10"
 # 托盘标签轮廓颜色
 TrayOutlineColor=#000000
 # 托盘标签文本颜色
@@ -21,13 +21,15 @@ UseInputMethodLanguageToDisplayText=True
 # 主题
 Theme=Fly
 # 深色主题
-DarkTheme=default-dark
+DarkTheme=winter
 # 跟随系统浅色/深色设置
 UseDarkTheme=True
+# 当被主题和桌面支持时使用系统的重点色
+UseAccentColor=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
-PerScreenDPI=True
+PerScreenDPI=False
 # 固定 Wayland 的字体 DPI
-ForceWaylandDPI=96
+ForceWaylandDPI=0
 # 在 Wayland 下启用分数缩放
 EnableFractionalScale=False
 
