--- a/utils/chrome-flags.conf
+++ b/utils/chrome-flags.conf
@@ -1,2 +1,5 @@
----enable-wayland-ime
--ozone-platform=wayland
+--ozone-platform-hint=wayland
+--enable-features=WaylandWindowDecorations
+--enable-features=WebRTCPipeWireCapturer
+--force-dark-mode
+--enable-wayland-ime
