--- a/utils/code-flags.conf
+++ b/utils/code-flags.conf
@@ -1,1 +1,5 @@
---ozone-platform-hint=auto
+--ozone-platform-hint=wayland
+--enable-features=WaylandWindowDecorations
+--enable-features=WebRTCPipeWireCapturer
+--force-dark-mode
+--enable-wayland-ime
