--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -18,7 +18,16 @@
       <string>微软雅黑</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+</match>
+
+<match target="pattern">
+    <test name="family">
       <string>Microsoft YaHei</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
       <string>Noto Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
