--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "terminal/.config/alacritty/catppuccin"]
-	path = terminal/.config/alacritty/catppuccin
-	url = git@github.com:catppuccin/alacritty.git
 [submodule "submodules/dotbot"]
 	path = submodules/dotbot
 	url = https://github.com/anishathalye/dotbot
@@ -10,4 +7,4 @@
 	url = git@github.com:tomasklaen/uosc.git
 [submodule "submodules/rime-ice"]
 	path = submodules/rime-ice
-	url = https://github.com/iDvel/rime-ice.git
+	url = git@github.com:colorsakura/rime-ice.git
