--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -3,7 +3,7 @@ Vertical Candidate List=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="Sans 10"
+Font="Sans Serif 11"
 # 菜单字体
 MenuFont="Sans 10"
 # 托盘字体
@@ -27,9 +27,9 @@ UseDarkTheme=True
 # 当被主题和桌面支持时使用系统的重点色
 UseAccentColor=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
-PerScreenDPI=False
+PerScreenDPI=True
 # 固定 Wayland 的字体 DPI
-ForceWaylandDPI=0
+ForceWaylandDPI=96
 # 在 Wayland 下启用分数缩放
 EnableFractionalScale=False
 
