fontconfig: add font config

--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -7,8 +7,16 @@
       <string>Simsun</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+</match>
+
+<match target="pattern">
+    <test name="family">
+      <string>WenQuanYi Zen Hei</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
       <string>文泉驿正黑</string>
-      <string>Noto Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
 </match>
@@ -18,7 +26,6 @@
       <string>微软雅黑</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Noto Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
 </match>
@@ -28,7 +35,6 @@
       <string>Microsoft YaHei</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Noto Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
 </match>
