--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -1,77 +1,91 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
+ <!-- Rendering options -->
+ <match target="font">
+  <edit name="autohint" mode="assign">
+   <bool>false</bool>
+  </edit>
+  <edit name="hinting" mode="assign">
+   <bool>true</bool>
+  </edit>
+  <edit name="hintstyle" mode="assign">
+   <const>hintslight</const>
+  </edit>
+  <edit name="antialias" mode="assign">
+   <bool>true</bool>
+  </edit>
+  <edit name="lcdfilter" mode="assign">
+   <const>lcddefault</const>
+  </edit>
+  <edit name="rgba" mode="assign">
+   <const>rgb</const>
+  </edit>
+ </match>
 
-  <!-- Rendering options -->
-  <match target="font">
-    <edit mode="assign" name="autohint">
-      <bool>false</bool>
-    </edit>
-    <edit mode="assign" name="hinting">
-      <bool>true</bool>
-    </edit>
-    <edit mode="assign" name="hintstyle">
-      <const>hintslight</const>
-    </edit>
-    <edit mode="assign" name="antialias">
-      <bool>true</bool>
-    </edit>
-    <edit mode="assign" name="lcdfilter">
-      <const>lcddefault</const>
-    </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
-    <edit name="embeddedbitmap" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
+ <!-- no embeddedbitmap except for Twemoji -->
+ <match target="font">
+  <test name="family" compare="not_eq">
+   <string>Twemoji</string>
+  </test>
+  <edit name="embeddedbitmap" mode="assign">
+   <bool>false</bool>
+  </edit>
+ </match>
 
-  <!-- Default system-ui fonts -->
-  <match target="pattern">
-    <test name="family">
-      <string>system-ui</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>sans-serif</string>
-    </edit>
-  </match>
+ <!-- Default system-ui fonts -->
+ <match target="pattern">
+  <test name="family">
+   <string>system-ui</string>
+  </test>
+  <edit name="family" binding="strong" mode="prepend">
+   <string>sans-serif</string>
+  </edit>
+ </match>
 
-  <!-- Default sans-serif fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>sans-serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans</string>
-      <string>Symbols Nerd Font</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
+ <!-- Default sans-serif fonts-->
+ <match target="pattern">
+  <test name="family">
+   <string>sans-serif</string>
+  </test>
+  <edit name="family" binding="strong" mode="prepend">
+   <string>Noto Sans</string>
+   <string>Noto Sans CJK SC</string>
+   <string>Twemoji</string>
+  </edit>
+ </match>
 
-  <!-- Default serif fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Serif</string>
-      <string>Symbols Nerd Font</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
+ <!-- Default serif fonts-->
+ <match target="pattern">
+  <test name="family">
+   <string>serif</string>
+  </test>
+  <edit name="family" binding="strong" mode="prepend">
+   <string>Noto Serif</string>
+   <string>Noto Sans CJK SC</string>
+   <string>Twemoji</string>
+  </edit>
+ </match>
 
-  <!-- Default monospace fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>monospace</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>JetBrains Mono</string>
-      <string>Noto Sans Mono</string>
-      <string>Symbols Nerd Font</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
+ <!-- Default monospace fonts-->
+ <match target="pattern">
+  <test name="family">
+   <string>monospace</string>
+  </test>
+  <edit name="family" binding="strong" mode="prepend">
+   <string>JetBrains Mono</string>
+   <string>Noto Sans CJK SC</string>
+   <string>Twemoji</string>
+   <string>Symbols Nerd Font</string>
+  </edit>
+ </match>
+
+<alias binding="strong">
+  <family>Twemoji Mozilla</family>
+  <accept>
+    <family>Twemoji</family>
+  </accept>
+</alias>
 
 </fontconfig>
+<!-- vim: set ft=xml fdm=marker: -->
