--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,15 +26,17 @@
     ~/.config/libinput-gestures.conf: utils/libinput-gestures.conf
     ~/.config/mako: config/mako
     ~/.config/mimeapps.list: config/mimeapps.list
-    ~/.config/mpv/scripts/uosc: submodules/uosc/scripts/uosc
     ~/.config/mpv: config/mpv
     ~/.config/neovide: config/neovide
     ~/.config/nvim: config/nvim
+    ~/.config/helix: config/helix
     ~/.config/pacman: config/pacman
     ~/.config/ranger: config/ranger
     ~/.config/rofi: config/rofi
     ~/.config/sway: config/sway
     ~/.config/swaylock: config/swaylock
+    ~/.config/systemd: config/systemd
+    ~/.config/environment.d: config/environment.d
     ~/.config/tofi: config/tofi
     ~/.config/translate-shell: config/translate-shell
     ~/.config/waybar: config/waybar
