feat: fix monospace cjk font issue

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -22,7 +22,6 @@
    <const>rgb</const>
   </edit>
  </match>
-
  <!-- no embeddedbitmap except for Twemoji -->
  <match target="font">
   <test name="family" compare="not_eq">
@@ -32,7 +31,6 @@
    <bool>false</bool>
   </edit>
  </match>
-
  <!-- Default system-ui fonts -->
  <match target="pattern">
   <test name="family">
@@ -42,7 +40,6 @@
    <string>sans-serif</string>
   </edit>
  </match>
-
  <!-- Default sans-serif fonts-->
  <match target="pattern">
   <test name="family">
@@ -54,7 +51,6 @@
    <string>Twemoji</string>
   </edit>
  </match>
-
  <!-- Default serif fonts-->
  <match target="pattern">
   <test name="family">
@@ -66,7 +62,6 @@
    <string>Twemoji</string>
   </edit>
  </match>
-
  <!-- Default monospace fonts-->
  <match target="pattern">
   <test name="family">
@@ -75,17 +70,16 @@
   <edit name="family" binding="strong" mode="prepend">
    <string>JetBrains Mono</string>
    <string>Noto Sans CJK SC</string>
-   <string>Twemoji</string>
    <string>Symbols Nerd Font</string>
+   <string>Twemoji</string>
   </edit>
  </match>
-
-<alias binding="strong">
+ <alias binding="strong">
   <family>Twemoji Mozilla</family>
   <accept>
-    <family>Twemoji</family>
+   <family>Twemoji</family>
   </accept>
-</alias>
-
+ </alias>
+ <dir>~/.local/share/fonts</dir>
 </fontconfig>
 <!-- vim: set ft=xml fdm=marker: -->
