--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -23,6 +23,15 @@
 
 <match target="pattern">
     <test name="family">
+      <string>PingFang SC</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+</match>
+
+<match target="pattern">
+    <test name="family">
       <string>微软雅黑</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
