--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,14 +10,17 @@
     ~/.Xresources: utils/.Xresources
     ~/.bashrc: utils/.bashrc
     ~/.config/alacritty: config/alacritty
+    ~/.config/cargo: config/cargo
     ~/.config/chrome-flags.conf: utils/chrome-flags.conf
     ~/.config/code-flags.conf: utils/code-flags.conf
     ~/.config/electron-flags.conf: utils/electron-flags.conf
     ~/.config/electron25-flags.conf: utils/electron-flags.conf
+    ~/.config/environment.d: config/environment.d
     ~/.config/fcitx5: config/fcitx5
     ~/.config/fish: config/fish
     ~/.config/fontconfig: config/fontconfig
     ~/.config/gtk-3.0: config/gtk-3.0
+    ~/.config/helix: config/helix
     ~/.config/htop: config/htop
     ~/.config/hypr: config/hypr
     ~/.config/imv: config/imv
@@ -29,14 +32,13 @@
     ~/.config/mpv: config/mpv
     ~/.config/neovide: config/neovide
     ~/.config/nvim: config/nvim
-    ~/.config/helix: config/helix
     ~/.config/pacman: config/pacman
     ~/.config/ranger: config/ranger
     ~/.config/rofi: config/rofi
     ~/.config/sway: config/sway
     ~/.config/swaylock: config/swaylock
     ~/.config/systemd: config/systemd
-    ~/.config/environment.d: config/environment.d
+    ~/.config/tmux: config/tmux
     ~/.config/tofi: config/tofi
     ~/.config/translate-shell: config/translate-shell
     ~/.config/waybar: config/waybar
@@ -54,9 +56,6 @@
       path: local/share/fcitx5/rime/*
     ~/.local/share/fcitx5/themes: local/share/fcitx5/themes
     ~/.local/share/xdg-terminals: local/share/xdg-terminals
-    ~/.tmux.conf.local: utils/.tmux.conf.local
-    ~/.tmux.conf: utils/.tmux.conf
-    ~/.tokyonight.tmux: utils/.tokyonight.tmux
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
