--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # -----------------------------------------------------------------------------
 # Tmux 基本配置 - 要求 Tmux >= 2.3
-# 如果不想使用插件，只需要将此节的内容写入 ~/.tmux.conf 即可
+# 如果不想使用插件，只需要将此节的内容写入 ~/.config/tmux/tmux.conf 即可
 # -----------------------------------------------------------------------------
 
 set -g default-terminal "xterm-256color"
@@ -21,6 +21,25 @@ setw -g allow-rename      off   # 禁止活动进程修改窗口名
 setw -g automatic-rename  off   # 禁止自动命名新窗口
 setw -g mode-keys         vi    # 进入复制模式的时候使用 vi 键位（默认是 EMACS）
 
+# Reload settings
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+
+# vim-like pane switching
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
+
+# Moving window
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
+
+# Resizing pane
+bind -r C-k resize-pane -U 5
+bind -r C-j resize-pane -D 5
+bind -r C-h resize-pane -L 5
+bind -r C-l resize-pane -R 5
+
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
@@ -30,16 +49,15 @@ source ~/.config/tmux/statusline.conf
 
 # -----------------------------------------------------------------------------
 # 使用插件 - via tpm
-#   1. 执行 git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-#   2. 执行 bash ~/.tmux/plugins/tpm/bin/install_plugins
+#   1. 执行 git clone https://github.com/tmux-plugins/tpm ~/.local/state/tmux/plugins/tpm
+#   2. 执行 bash ~/.local/state/tmux/plugins/tpm/bin/install_plugins
 # -----------------------------------------------------------------------------
 
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.local/state/tmux/plugins'
 
 # 推荐的插件（请去每个插件的仓库下读一读使用教程）
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -49,7 +67,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @resurrect-dir '~/.local/state/tmux/resurrect'
 
 # tmux-prefix-highlight
-set -g status-right '#{prefix_highlight} #H | %a %Y-%m-%d %H:%M'
+set -g status-right '#{prefix_highlight} %H:%M'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=blue'
 
