--- a/config/sway/conf.d/for_window.conf
+++ b/config/sway/conf.d/for_window.conf
@@ -27,7 +27,12 @@ for_window [app_id="thunderbird"] floating enable
 for_window [title="^Open File$"] floating enable
 for_window [app_id="Element"] floating enable
 for_window [app_id="anki"] floating enable
-for_window [app_id="mpv"] floating enable
+
+# MPV
+for_window [app_id="mpv"] {
+    floating enable
+    # resize set 70ppt 70ppt
+}
 
 # JetBrains APPS
 for_window [class="^(com.intellij.idea.Main)$" title="^(Welcome to*)$"] {
@@ -42,7 +47,7 @@ for_window [title="^(Float Terminal|System Monitor|Explore)$"] {
 }
 
 # Blender
-for_window [title="^.*(Preferences|设置)$" app_id="blender"] floating enable
+for_window [title="^Blender(Preferences|偏好设置)$" app_id="blender"] floating enable
 
 # Goldendict
 for_window [class="GoldenDict-ng"] {
@@ -73,9 +78,6 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
 }
 
 # Firefox
-for_window [app_id="^firefox.*$" title="About Mozilla Firefox"] {
-    floating enable
-}
 for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
     floating enable
     resize set 60ppt 60ppt
@@ -90,4 +92,4 @@ for_window [app_id="pot"] floating enable
 for_window [class="steam" title="Steam 设置"] floating enable
 for_window [class="steam" title="好友列表"] floating enable
 
-# vim: set noet:
+# vim: set ft=swayconfig noet:
