--- a/config/sway/config
+++ b/config/sway/config
@@ -2,251 +2,26 @@ include /etc/sway/config.d/*
 
 ### Variables
 set $mod Mod4
-set $TERMINAL kitty
+set $TERMINAL alacritty
 set $BROWSER firefox
 set $TOP htop
-set $FMANAGER lf
+set $FMANAGER yazi
 
 ### Monitor
 output eDP-1 mode 2880x1800 scale 2
 output DP-1 mode 3840x2160 scale 2
 
-### Input
-input "type:keyboard" {
-    repeat_delay 500
-    repeat_rate 30
-    natural_scroll enabled
-}
-
-input "type:touchpad" {
-    dwt enabled
-    # events disabled
-    tap enabled
-}
-
 ### General
 # xwayland disable
-smart_borders on
-default_border pixel 1
+default_border none
 default_floating_border none
 
-# floating_maximum_size wxh
+gaps inner 0
+gaps outer 0
 
-workspace_auto_back_and_forth yes
+include ~/.config/sway/conf.d/*
 
-gaps inner 1
-gaps outer 1
-
-# Hide mouse after 5 seconds inactivity
-seat * hide_cursor 5000
-
-### AutoStartup
-exec /usr/lib/polkit-kde-authentication-agent-1
-exec_always --no-startup-id wm-gsetting
-# exec_always --no-startup-id wm-xwayland
-exec --no-startup-id wm-xdg
-exec wm-idle
-exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
-exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
-
-### Windowrule
-
-# Inhibit Idle if a window is fullscreen
-for_window [class="^.*"] inhibit_idle fullscreen
-for_window [app_id="^.*"] inhibit_idle fullscreen
-
-# Special rules for X11, wayland not supported `window_role`
-for_window [window_role = "task_dialog"] floating enable
-for_window [window_role = "pop-up"] floating enable
-for_window [window_role = "bubble"] floating enable
-for_window [window_role = "dialog"] floating enable
-for_window [window_type = "dialog"] floating enable
-for_window [window_type = "menu"] floating enable
-
-# Floating Apps
-for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
-for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
-for_window [app_id="com.github.wwmm.easyeffects"] floating enable
-for_window [app_id="org.fcitx.fcitx5-config-qt"] floating enable
-for_window [app_id="org.wireshark.Wireshark"] floating enable
-for_window [app_id="com.obsproject.Studio"] floating enable
-for_window [app_id="org.telegram.desktop"] floating enable
-for_window [app_id="org.pipewire.Helvum"] floating enable
-for_window [app_id="remote-viewer"] floating enable
-for_window [app_id="timeshift-gtk"] floating enable
-for_window [app_id="thunderbird"] floating enable
-for_window [title="^Open File$"] floating enable
-for_window [app_id="Element"] floating enable
-for_window [app_id="anki"] floating enable
-for_window [app_id="mpv"] floating enable
-
-# JetBrains APPS
-for_window [class="^(com.intellij.idea.Main)$" title="^(Welcome to*)$"] {
-    floating enable
-    resize set 70ppt 70ppt
-}
-
-# Floating System Utils
-for_window [title="^(Float Terminal|System Monitor|Explore)$"] {
-    floating enable
-    resize set 70ppt 70ppt
-}
-
-# Blender
-for_window [title="^.*(Preferences|设置)$" app_id="blender"] floating enable
-
-# Goldendict
-for_window [class="GoldenDict-ng"] {
-    floating enable
-    resize set 70ppt 70ppt
-}
-
-# CopyQ
-for_window [app_id="com.github.hluk.copyq"] floating enable
-
-# Imv
-for_window [app_id="imv"] {
-    floating enable
-    sticky enable
-    resize set 70ppt 70ppt
-}
-
-# Visaul Studio Code
-for_window [app_id="code" title="^.*Fold.*$"] {
-    floating enable
-    resize set 60ppt 60ppt
-}
-
-# Telegram
-for_window [app_id="org.telegram.desktop" title="Media viewer"] {
-    floating enable
-    resize set 60ppt 60ppt
-}
-
-# Firefox
-for_window [app_id="^firefox.*$" title="About Mozilla Firefox"] {
-    floating enable
-}
-for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
-    floating enable
-    resize set 60ppt 60ppt
-}
-for_window [app_id="^firefox.*$" title="^Library$"] floating enable
-
-# pot-app
-for_window [app_id="pot"] floating enable
-
-# Steam
-## 设置
-for_window [class="steam" title="Steam 设置"] floating enable
-for_window [class="steam" title="好友列表"] floating enable
-
-### Keybinds
-# Gestures
-bindgesture swipe:3:right workspace prev
-bindgesture swipe:3:left workspace next
-bindgesture swipe:3:up move scratchpad
-bindgesture swipe:3:down scratchpad show
-
-# Use wev can get key name;
-floating_modifier $mod normal
-# Exit Sway
-bindsym Ctrl+Alt+Backspace exit
-bindsym $mod+F floating toggle
-bindsym $mod+Shift+F fullscreen toggle
-bindsym $mod+P sticky toggle
-bindsym Alt+Tab focus next
-# Kill focused window
-bindsym $mod+C kill
-bindsym Alt+F4 kill
-# Reload the configuration file
-bindsym $mod+Shift+R reload
-# Move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move window scratchpad
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
-
-# pot-app
-bindsym $mod+ALT+X exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
-bindsym $mod+ALT+C exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
-bindsym $mod+Shift+C exec curl "127.0.0.1:60828/selection_translate"
-
-bindsym Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" -e $TOP
-bindsym Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" -e $TOP
-bindsym $mod+E exec $TERMINAL --title "Explore" -e $FMANAGER $HOME
-
-bindsym $mod+B exec $BROWSER
-bindsym $mod+O exec obsidian
-bindsym $mod+Shift+O exec obsidian
-
-# Start a terminal
-bindsym $mod+T exec $TERMINAL
-bindsym $mod+Return exec $TERMINAL
-bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
-
-# Start your launcher
-bindsym $mod+R exec source ~/.config/fish/config.fish & wofi --show drun
-bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-# bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
-
-bindsym $mod+V exec copyq toggle
-bindsym $mod+L exec swaylock -f
-
-# Keyboard Control Function
-# @TODO: move this to a wrap function script, use wpctl and etc
-bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
-bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
-bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
-bindsym --locked XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindsym --locked XF86MonBrightnessUp exec light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
-bindsym --locked XF86MonBrightnessDown exec light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
-bindsym --locked XF86AudioPlay exec playerctl play-pause
-bindsym --locked XF86AudioNext exec playerctl next
-bindsym --locked XF86AudioPrev exec playerctl previous
-bindsym --locked Print exec grim -g - - | wl-copy --type image/png
-
-# Moving around:
-# Move your focus around
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-# Ditto, with arrow keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-
-### Workspaces:
-
-# Switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
-# Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
-
-### Status Bar
 bar {
-    swaybar_command waybar
+	swaybar_command waybar
 }
-
 # vim: set noet:
