--- a/config/wofi/config
+++ b/config/wofi/config
@@ -1,7 +1,7 @@
 hide_scroll=true
 show=drun
 width=30%
-lines=8
+lines=3
 line_wrap=word
 term=kitty
 allow_markup=true
@@ -10,11 +10,10 @@ show_all=true
 print_command=true
 layer=overlay
 allow_images=true
-sort_order=alphabetical
 gtk_dark=true
-prompt=
+prompt=Hello Wofi!
 image_size=20
 display_generic=false
-location=center
+location=top
 key_expand=Tab
 insensitive=true
