--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -15,21 +15,20 @@ hwdec-codecs    = all
 # Enable vulkan
 # see more: https://github.com/mpv-player/mpv/issues/11739
 # vulkan need mpv 0.36+
-hwdec           = auto-copy-safe  # <vaapi|vulkan>
+hwdec           = vaapi  # <vaapi|vulkan>
 gpu-api         = vulkan
 gpu-context     = waylandvk
 vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-vaapi-device    = /dev/dri/renderD128
 vf              = format:dolbyvision=yes
-cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
-scale           = bilinear          # 放大算法，默认值同上
-dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
+# cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
+# scale           = bilinear          # 放大算法，默认值同上
+# dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
 # ===== OSD =====
 osc                   = no
 border                = no
 osd-bar               = no
 osd-bold              = yes
-osd-font-size         = 14
+osd-font-size         = 11
 # ===== Seeking =====
 save-position-on-quit=yes               # saves the seekbar position on exit
 # ===== RAM =====
@@ -55,3 +54,22 @@ load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置
 # ===== Scripts =====
 ytdl               = yes  # 网址解析增强，默认 yes
 script-opts        = ytdl_hook-ytdl_path=yt-dlp
+
+[bilibili]
+profile-desc = Tencent videos
+profile-cond = path:match("https://www.bilibili.com")~=nil
+profile-restore=copy
+ytdl-raw-options = cookies-from-browser=firefox
+
+[bilibili-live]
+profile-desc = Bilibili live videos
+profile-cond = path:match("https://live.bilibili.com")~=nil
+profile-restore = copy
+# mpegts hevc 原画 / flv avc 原画 / ...
+# ytdl-format = source-7/source-0/source
+
+[tencent]
+profile-desc = Tencent videos
+profile-cond = path:match("https://v.qq.com")~=nil
+profile-restore=copy
+ytdl-raw-options = cookies-from-browser=firefox
