--- a/config/mpv/script-opts/uosc.conf
+++ b/config/mpv/script-opts/uosc.conf
@@ -6,7 +6,7 @@ timeline_line_width=2
 timeline_size=40
 # Comma separated states when element should always be fully visible.
 # Available: paused, audio, image, video, idle, windowed, fullscreen
-timeline_persistency=paused
+timeline_persistency=
 # Top border of background color to help visually separate timeline from video
 timeline_border=1
 # When scrolling above timeline, wheel will seek by this amount of seconds
@@ -20,28 +20,27 @@ progress=windowed
 progress_size=2
 progress_line_width=20
 
-# A comma delimited list of items to construct the controls bar above the timeline. Set to `never` to disable.
+# A comma delimited list of controls above the timeline. Set to `never` to disable.
 # Parameter spec: enclosed in `{}` means value, enclosed in `[]` means optional
 # Full item syntax: `[<[!]{disposition1}[,[!]{dispositionN}]>]{element}[:{paramN}][#{badge}[>{limit}]][?{tooltip}]`
 # Common properties:
 #   `{icon}` - parameter used to specify an icon name (example: `face`)
-#            - you can pick one here: https://fonts.google.com/icons?selected=Material+Icons&icon.style=Rounded
+#            - pick here: https://fonts.google.com/icons?icon.platform=web&icon.set=Material+Icons&icon.style=Rounded
 # `{element}`s and their parameters:
-#   `{usoc_command}` - preconfigured shorthands for uosc commands that make sense to have as buttons:
-#      - `menu`, `subtitles`, `audio`, `video`, `playlist`, `chapters`, `editions`, `stream-quality`,
-#        `open-file`, `items`, `next`, `prev`, `first`, `last`, `audio-device`
-#   `fullscreen` - toggle fullscreen
-#   `loop-playlist` - button to toggle playlist looping
-#   `loop-file` - button to toggle current file looping
-#   `shuffle` - toggle for uosc's shuffle mode
+#   `{shorthand}` - preconfigured shorthands:
+#        `play-pause`, `menu`, `subtitles`, `audio`, `video`, `playlist`,
+#        `chapters`, `editions`, `stream-quality`, `open-file`, `items`,
+#        `next`, `prev`, `first`, `last`, `audio-device`, `fullscreen`,
+#        `loop-playlist`, `loop-file`, `shuffle`
 #   `speed[:{scale}]` - display speed slider, [{scale}] - factor of controls_size, default: 1.3
 #   `command:{icon}:{command}` - button that executes a {command} when pressed
 #   `toggle:{icon}:{prop}[@{owner}]` - button that toggles mpv property
 #   `cycle:{default_icon}:{prop}[@{owner}]:{value1}[={icon1}][!]/{valueN}[={iconN}][!]`
-#     - button that cycles mpv property between values, each optionally having different icon and active flag
-#     - presence of `!` at the end will style the button as active
-#     - `{owner}` is the name of a script that manages this property if any
-#   `gap[:{scale}]` - display an empty gap, {scale} - factor of controls_size, default: 0.3
+#       - button that cycles mpv property between values, each optionally having different icon and active flag
+#       - presence of `!` at the end will style the button as active
+#       - `{owner}` is the name of a script that manages this property if any
+#   `gap[:{scale}]` - display an empty gap
+#       {scale} - factor of controls_size, default: 0.3
 #   `space` - fills all available space between previous and next item, useful to align items to the right
 #           - multiple spaces divide the available space among themselves, which can be used for centering
 # Item visibility control:
@@ -73,14 +72,13 @@ progress_line_width=20
 #   `>{limit}` will display the badge only if it's numerical value is above this threshold.
 #   Example: `#audio>1`
 # Place `?{tooltip}` after the element config to give it a tooltip.
-#   Example: `<stream>stream-quality?Stream quality`
-# Example implementations of some of the available shorthands:
+# Example implementations:
 #   menu = command:menu:script-binding uosc/menu-blurred?Menu
 #   subtitles = command:subtitles:script-binding uosc/subtitles#sub?Subtitles
 #   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit!?Fullscreen
 #   loop-playlist = cycle:repeat:loop-playlist:no/inf!?Loop playlist
 #   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes!
-controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,prev,command:history:script-binding memo-history?History,items,next,gap,fullscreen
+controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
 controls_size=32
 controls_margin=8
 controls_spacing=2
@@ -101,6 +99,7 @@ speed_persistency=
 # Controls all menus, such as context menu, subtitle loader/selector, etc
 menu_item_height=36
 menu_min_width=260
+menu_padding=4
 # Determines if `/` or `ctrl+f` is required to activate the search, or if typing
 # any text is sufficient.
 # When enabled, you can no longer toggle a menu off with the same key that opened it, if the key is a unicode character.
@@ -148,11 +147,13 @@ font_scale=1
 # Border of text and icons when drawn directly on top of video
 text_border=1.2
 # Border radius of buttons, menus, and all other rectangles
-border_radius=2
-# A comma delimited list of opacity overrides for various UI element backgrounds and shapes. Text is always 100%.
-# Example: opacity=timeline=0.5,title=0.5
-# Defaults: timeline=.9,position=1,chapters=0.8,slider=0.9,slider_gauge=1,speed=0.6,
-#           menu=1,submenu=0.4,border=1,title=1,tooltip=1,thumbnail=1,curtain=0.5
+border_radius=4
+# A comma delimited list of color overrides in RGB HEX format. Defaults:
+# foreground=ffffff,foreground_text=000000,background=000000,background_text=ffffff,curtain=111111,success=a5e075,error=ff616e
+color=
+# A comma delimited list of opacity overrides for various UI element backgrounds and shapes.
+# This does not affect any text, which is always rendered fully opaque. Defaults:
+# timeline=0.9,position=1,chapters=0.8,slider=0.9,slider_gauge=1,controls=0,speed=0.6,menu=1,submenu=0.4,border=1,title=1,tooltip=1,thumbnail=1,curtain=0.8,idle_indicator=0.8,audio_indicator=0.5,buffering_indicator=0.3,playlist_position=0.8
 opacity=
 # Use a faster estimation method instead of accurate measurement
 # setting this to `no` might have a noticeable impact on performance, especially in large menus.
@@ -168,11 +169,6 @@ flash_duration=1000
 # Distances in pixels below which elements are fully faded in/out
 proximity_in=40
 proximity_out=120
-# RGB HEX color codes
-foreground=ffffff
-foreground_text=000000
-background=000000
-background_text=ffffff
 # Use only bold font weight throughout the whole UI
 font_bold=no
 # One of `total`, `playtime-remaining` (scaled by the current speed), `time-remaining` (remaining length of file)
@@ -181,9 +177,9 @@ destination_time=playtime-remaining
 time_precision=0
 # Display stream's buffered time in timeline if it's lower than this amount of seconds, 0 to disable
 buffered_time_threshold=60
-# Hide UI when mpv autohides the cursor
+# Hide UI when mpv autohides the cursor. Timing is controlled by `cursor-autohide` in `mpv.conf` (in milliseconds).
 autohide=no
-# Can be: none, flash, static, manual (controlled by flash-pause-indicator and decide-pause-indicator commands)
+# Can be: flash, static, manual (controlled by flash-pause-indicator and decide-pause-indicator commands)
 pause_indicator=flash
 # Sizes to list in stream quality menu
 stream_quality_options=4320,2160,1440,1080,720,480,360,240,144
@@ -225,4 +221,9 @@ chapter_range_patterns=openings:オープニング;endings:エンディング
 # Built in languages can be found in `uosc/intl`.
 # `slang` is a keyword to inherit values from `--slang` mpv config.
 # Supports paths to custom json files: `languages=~~/custom.json,slang,en`
-languages=slang,zh-hans
+languages=slang,en
+
+# A comma separated list of element IDs to disable. Available IDs:
+#   window_border, top_bar, timeline, controls, volume,
+#   idle_indicator, audio_indicator, buffering_indicator, pause_indicator
+disable_elements=
