--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,10 +6,9 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-
-# C-b 和 VIM 冲突，修改 Prefix 组合键为 Control-Z，按键距离近
-set -g prefix C-z
-set-option -g prefix2 `
+# Ctrl-g 与 nvim 冲突, 显示当前文件位置
+set -g prefix C-g
+# set-option -g prefix2 `
 
 set -g base-index         1     # 窗口编号从 1 开始计数
 set -g display-panes-time 10000 # PREFIX-Q 显示编号的驻留时长，单位 ms
