feat(sway): spilt sway config

--- a/config/sway/conf.d/bind.conf
+++ b/config/sway/conf.d/bind.conf
@@ -11,7 +11,6 @@ floating_modifier $mod normal
 # Exit Sway
 bindsym Ctrl+Alt+Backspace exit
 bindsym $mod+F floating toggle
-bindsym $mod+Shift+F fullscreen toggle
 bindsym $mod+P sticky toggle
 bindsym Alt+Tab focus next
 # Kill focused window
@@ -27,9 +26,9 @@ bindsym $mod+Shift+minus move window scratchpad
 bindsym $mod+minus scratchpad show
 
 # pot-app
-bindsym $mod+ALT+X exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
-bindsym $mod+ALT+C exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
-bindsym $mod+Shift+C exec curl "127.0.0.1:60828/selection_translate"
+bindsym $mod+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
+bindsym $mod+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
+bindsym $mod+Z exec curl "127.0.0.1:60828/selection_translate"
 
 bindsym Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" -e $TOP
 bindsym Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" -e $TOP
@@ -62,7 +61,7 @@ bindsym --locked XF86MonBrightnessDown exec light -U 5
 bindsym --locked XF86AudioPlay exec playerctl play-pause
 bindsym --locked XF86AudioNext exec playerctl next
 bindsym --locked XF86AudioPrev exec playerctl previous
-bindsym --locked Print exec grim -g - - | wl-copy --type image/png
+bindsym --locked Print exec grim
 
 # Moving around:
 # Move your focus around
