--- a/config/sway/conf.d/exec.conf
+++ b/config/sway/conf.d/exec.conf
@@ -2,6 +2,11 @@ exec /usr/lib/polkit-kde-authentication-agent-1
 exec_always --no-startup-id wm-gsetting
 exec --no-startup-id wm-xdg
 exec --no-startup-id wm-idle
+exec_always {
+    xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+    xrdb -merge <<< 'Xft.dpi: 192'
+    xsettingsd
+}
 exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
 exec --no-startup-id auto-start
 exec env LANG=zh_CN.UTF-8 fcitx5 -d --replace
