--- a/config/sway/conf.d/for_window.conf
+++ b/config/sway/conf.d/for_window.conf
@@ -26,6 +26,7 @@ for_window [app_id="timeshift-gtk"] floating enable
 for_window [app_id="thunderbird"] floating enable
 for_window [title="^Open File$"] floating enable
 for_window [app_id="Element"] floating enable
+for_window [app_id="neovide"] floating enable
 for_window [app_id="anki"] floating enable
 
 # MPV
@@ -91,5 +92,8 @@ for_window [app_id="pot"] floating enable
 ## 设置
 for_window [class="steam" title="Steam 设置"] floating enable
 for_window [class="steam" title="好友列表"] floating enable
+
+# Octave
+for_window [app_id="org.octave.Octave" title="Figure *"] floating enable
 
 # vim: set ft=swayconfig noet:
