--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [window]
-opacity = 0.95
-blur = true
+opacity = 0.98
+blur = true # only works on KDE Wayland
 dimensions = { columns = 100, lines = 30 }
 dynamic_padding = true
 
