mpv: update memo plugin

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,5 +1,3 @@
-# MPV v3 Config - version 1.0.10
-
 # [Default]
 
 # ===== Terminal =====
@@ -54,22 +52,36 @@ load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置
 # ===== Scripts =====
 ytdl               = yes  # 网址解析增强，默认 yes
 script-opts        = ytdl_hook-ytdl_path=yt-dlp
-
-[bilibili]
-profile-desc = Tencent videos
-profile-cond = path:match("https://www.bilibili.com")~=nil
-profile-restore=copy
 ytdl-raw-options = cookies-from-browser=firefox
+
+# [bilibili]
+# profile-desc = Tencent videos
+# profile-cond = path:match("https://www.bilibili.com")~=nil
+# profile-restore=copy
+# ytdl-raw-options = cookies-from-browser=firefox
 
 [bilibili-live]
 profile-desc = Bilibili live videos
 profile-cond = path:match("https://live.bilibili.com")~=nil
 profile-restore = copy
+ytdl-raw-options = cookies-from-browser=firefox
 # mpegts hevc 原画 / flv avc 原画 / ...
-# ytdl-format = source-7/source-0/source
+ytdl-format = source-7/source-0/source
 
 [tencent]
 profile-desc = Tencent videos
 profile-cond = path:match("https://v.qq.com")~=nil
 profile-restore=copy
 ytdl-raw-options = cookies-from-browser=firefox
+
+[music]
+script-opts-append=osc-visibility=always
+script-opts-append=osc-layout=slimbox
+script-opts-append=osc-seekbarstyle=knob
+script-opts-append=osc-boxalpha=50
+script-opts-append=osc-valign=0.9
+script-opts-append=osc-seekrangestyle=bar
+script-opts-append=playlistmanager-loadfiles_filetypes=["gif","mp3","wav","ogm","flac","m4a","wma","ogg","opus","mkv","avi","mp4","ogv","webm","rmvb","flv","wmv","mpeg","mpg","m4v","3gp"]
+video-sync=audio
+autofit-larger=50%x60%
+loop-playlist=inf
